Bug 169049 - Problems with Data provider SORT_TRANSFORMATION
Summary: Problems with Data provider SORT_TRANSFORMATION
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.8.0 target:26.2.0.2
Keywords:
Depends on:
Blocks: Data-Provider
  Show dependency treegraph
 
Reported: 2025-10-24 23:50 UTC by Regina Henschel
Modified: 2025-12-22 10:46 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2025-10-24 23:50:33 UTC
Download the attachment 203516 [details] (csv file from bug 169036) to your PC.
Start a new spreadsheet. Define a database range "myImport" for range $Sheet1.$A$2:$C$101 and make sure that "contains column labels" is checked (that is in Options).
Menu > Data > Data Provider.
In that dialog do these:
* in section `Source` select the database range "myImport".
* Click on the `Browse` button and select the downloaded csv file.
* in section `Transformations` select entry `Split Column` and click on `Add` button. You get additional fields.
* In field `Separator string` insert a pipe symbol, that is | . In field `Column index` enter 1. Click the `Apply` button below the Preview.
* in section `Transformations` click on `Add` again to insert the next `Split Column` transformation.
* Enter the pipe symbol in the field `Separator string` and value 2 in `Column index` field. Click the `Apply` button below the Preview.
* In section `Transformations` select entry `Sort columns` and click on `Add`
* Select `Ascending order` and set column index to 3. Click the `Apply` button.

Error: The preview does not show a sort.

Click on OK button.

You get data sorted ascending in column C, but the label row is treated as ordinary record although your database range has set "contains column labels".

The sort transformation should examine the setting in the target range or should provide a checkbox itself, whether to include the first row in sorting.

As workaround, the sorting could be always as if "contains column labels" is checked, because it is very likely that the to be imported data has labels.
Comment 1 raal 2025-10-25 06:18:22 UTC
I can confirm with Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2595f031fa93c1eb89fb4dce6f337de9be813e15
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 2 Regina Henschel 2025-12-15 11:28:33 UTC
Proposed patch is in https://gerrit.libreoffice.org/c/core/+/195203
Comment 3 Commit Notification 2025-12-19 20:40:13 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4069facf79f37df2e6b9039c18b3ed78ab9c4d2a

tdf#169049 ensure valid range for preview document

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-12-22 10:46:31 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/179f93c3ab0b16ecae1372aac6e1b0d709f7244e

tdf#169049 ensure valid range for preview document

It will be available in 26.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.