sc/source/ui/inc/dataproviderdlg.hxx
@@ -22,6 +22,7 @@
 class ScDocument;
 class ScDataTransformationBaseControl;
 class ScDBData;
+class ScDBCollection;
 
 class ScDataProviderDlg : public weld::GenericDialogController
 {
@@ -53,6 +54,7 @@ private:
 
     sal_uInt32 mnIndex;
     ScDBData* pDBData;
+    ScDBCollection* mpDestDBCollection;
 
     DECL_LINK(StartMenuHdl, const OString&, void);
     DECL_LINK(ColumnMenuHdl, const weld::ComboBox&, void);
